# candle-bert-time-series

./: .gitignore  BACKTEST_README.md  Cargo.toml  README.md  README_DOWNLOAD_REFACTOR.md  example_month_pair.html  pairlist.txt  setup.sh
crypto_data/BTCUSDT/2017/08/: 2017-08.parquet
crypto_data/BTCUSDT/2017/09/: 2017-09.parquet
crypto_data/BTCUSDT/2017/10/: 2017-10.parquet
examples/: correlation_divergence_strategy.rs  create_dataset.rs  data_sanity_checks.py  data_visualization.py  dataset_summary.py  download_data.rs  download_data_workstealing.rs  download_data_workstealing_k_lines.rs  inspect_data.rs  model_momentum_strategy.rs  qualitative_analysis.rs  quantitative_analysis.rs  quantitative_analysis_experimental.rs  quantitative_analysis_experimental_v2.rs  quantitative_analysis_experimental_v3.rs  quantitative_analysis_selective.rs  simple_strategy.rs  test_data_loading.rs  test_download.rs  test_monthly_daily.rs  transform_dataset.rs  verify_transformed_dataset.py
src/: backtest.rs  batcher.rs  dataset.rs  financial_bert.rs  lib.rs  main.rs  oritinal_bert.rs
trainings_runs/: 2025_07_04_13_24_large_ep1.md  2025_07_04_14_35_large_ep2.md  2025_07_04_16_27_large_ep3.md  2025_07_04_16_27_large_r2_ep1.md  2025_07_04_16_27_large_r2_ep2.md  2025_07_04_16_27_large_r2_ep9.md  2025_07_04_16_27_large_r3_ep2+1.md  2025_07_24_13_06_small.txt  2025_07_24_13_24_large.txt
