[package]
name = "candle-bert-time-series"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-core = { version = "0.9.1", features = ["cuda"] }
candle-nn = { version = "0.9.1", features = ["cuda"] }
candle-transformers = { version = "0.9.1", features = ["cuda"] }
anyhow = "1"
serde ={ version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"


polars = { version = "0.49.1", features = ["lazy", "csv", "temporal", "parquet"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
chrono = "0.4"
zip = "4.2.0"
walkdir = "2.3"
rayon = "1.10"
num_cpus = "1.16"
tempfile = "3.20"